# DatasetHandler

./: .gitignore  LICENSE  README.md  entrypoint.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  documentation.yml  publish.yml
docs/: index.md
src/: download.py  extract.py
src/dataset_handler/: download.py  entrypoint.py  extract.py
tests/: conftest.py  test_download.py
